conf/phant/phantserver-deployment-raspi.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: phantserver
  labels:
    app: phant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phant
      task: server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: phant
        task: server
        version: v0.1.3
    spec:
      containers:
      - name: phant
        image: dpcrook/phant_server-docker:0.1.3-arm32v7
        #imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
          limits:
            cpu: 100m
            memory: 500Mi
        args: [ "./.bin/serve" ]
        ports:
        - containerPort: 8888
          name: phant-http
        - containerPort: 8889
          name: phant-telnet
        volumeMounts:
        - mountPath: /app/phant_streams/
          name: phantserver-persistent-storage
        workingDir: /app
      restartPolicy: Always
      volumes:
      - name: phantserver-persistent-storage
        persistentVolumeClaim:
          claimName: phantserver-persistent-claim
