conf/phant/phantserver-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: phantserver

spec:
  ports:
    - name: phant-http
      protocol: TCP
      port: 8888
  selector:
    app: phant
