conf/phant/phantserver-ingress-tls.yaml
---
apiVersion:  traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect-phantserver

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`data.crookster.org`)
      services:
        - name: phantserver
          port: 8888
      middlewares:
        - name: redirect-to-https
---
apiVersion:  traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-phantserver

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`data.crookster.org`)
      kind: Rule
      services:
        - name: phantserver
          port: 8888
      # middlewares:
      #   - name: my-fail2ban
  tls:
    certResolver: myresolver
